Added Real-time Video Inferencing from a camera

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,8 @@
 [TRAINING]
-crop = False
-apply_augmentation = False
+crop = True
+apply_augmentation = True
 number_of_augmentations = 10
+model_name = "face_recogniser_KNN_model.pkl"
 
+[INFERENCE]
+model_path = "model/face_recogniser_KNN_model.pkl"
